--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "dat.gui": "^0.7.7",
     "three": "^0.134.0",
     "vue": "^3.2.16",
     "vuex": "^4.0.2"
